--- a/wp-content/themes/techcomfort/assets/scss/_products.scss
+++ b/wp-content/themes/techcomfort/assets/scss/_products.scss
@@ -184,8 +184,9 @@
         margin-bottom: 8px;
       }
       .price {
-        font-size: 18px;
-        display:   inline-block;
+        margin-top: 6px;
+        font-size:  18px;
+        display:    inline-block;
       }
       .description-buttons {
         display:         flex;
@@ -378,7 +379,8 @@
       width:     100%;
       max-width: 100%;
       .item-image {
-        height: 200px;
+        height:        120px;
+        margin-bottom: 0;
       }
     }
   }
